# AstroPFM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
data/: README.md
src/astropfm/: __init__.py
src/astropfm/data/: __init__.py  dataset.py  preprocessing.py
src/astropfm/models/: gp.py  noise.py
src/astropfm/operators/: __init__.py  convolution.py  masking.py  reprojection.py  units_conversion.py
src/astropfm/utils/: config.py
tests/: test_import.py
